--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 flask
 flask-cors
-flask-socketio
-eventlet
-google-cloud-vision
-tensorflow==2.15.0
-keras==3.3.3
-numpy
-opencv-python-headless
-pillow
+flask-socketio==5.3.6
+eventlet==0.33.3
+google-cloud-vision==3.10.2
+tensorflow-cpu==2.20.0
+keras==3.4.1
+numpy==1.26.4
+opencv-python-headless==4.10.0.84
+pillow==10.4.0
 python-dotenv
-openai
+openai>=1.0.0
