--- a/render.yaml
+++ b/render.yaml
@@ -14,7 +14,7 @@ services:
       pip install -r requirements.txt
 
     # Socket.IO friendly (eventlet). If your file isn't app.py, change "app:app".
-    startCommand: gunicorn -k eventlet -w 1 -b 0.0.0.0:$PORT app:app
+    startCommand: python app.py
 
     envVars:
       - key: PYTHON_VERSION
@@ -45,4 +45,5 @@ services:
 
     healthCheckPath: /healthz
     autoDeploy: true
+
 
